welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: value of is not a member of Boolean
  if( (a+b)==10 of (a+c)==10 or (b+c)==10){
                ^